Updated some layout issues with home page (May not be completely solved), Also updated my section (Theo - Weather Checker) to use bootstrap cards instead.

--- a/Theo/styles.css
+++ b/Theo/styles.css
@@ -1,26 +1,24 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-.customcontainer {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+.customBackground1 {
     background: rgb(251, 242, 133);
     background: radial-gradient( circle, rgba(251, 242, 133, 0.6334908963585435) 0%, rgba(224, 196, 91, 0.8407738095238095) 35%, rgba(230, 224, 113, 1) 100% );
+}
+
+.temps {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 15px 0;
+    font-size: 1.5rem;
+    justify-content: center;
 }
 
 .weather {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 15px 0;
     font-size: 1.5rem;
+    justify-content: center;
 }
 
 #location {
@@ -29,12 +27,12 @@
     font-style: italic;
 }
 
-.desc {
+#desc {
     font-size: 1.25rem;
     text-transform: capitalize;
 }
 
-.circle {
+#circle {
     background-color: black;
     border-radius: 50px;
     height: 15px;
